# Standalone manifest: `crates/probes` is **excluded** from the workspace (root Cargo.toml), so it
# can't inherit workspace fields. It builds for `bpfel-unknown-none` (not the host triple) via
# `bpf-linker`, under its own **nightly** toolchain (`rust-toolchain.toml`) with `build-std = ["core"]`
# (`.cargo/config.toml`). The host workspace stays on stable and never compiles this crate; its object
# is built separately by `cargo xtask build-probes`.
[package]
name = "agent-probes"
version = "0.1.0"
edition = "2021"
# Excluded from the workspace (builds for `bpfel-unknown-none`, not the host triple), so its package
# fields are spelled literally rather than inherited from `[workspace.package]`.
rust-version = "1.94"
license = "Apache-2.0"
authors = ["K Henry LLC <founder@khenry.dev>"]
repository = "https://github.com/k-henry-org/agent"
publish = false
description = "The eBPF programs (no_std): syscall tracepoints, tc/XDP on the tap, cgroup accounting."

[dependencies]
# The in-kernel eBPF side of aya: `#[tracepoint]`/`#[classifier]`/… macros, program contexts, and
# map types. Its userspace counterpart (`aya`) lives in `crates/probes-loader`.
aya-ebpf = "0.1"

# The wire record written into the ring buffer (`SyscallEvent`), shared with the userspace reader so
# the two sides can't drift. `no_std`, no default features: the BPF side never wants `std`.
agent-probes-common = { path = "../probes-common", default-features = false }

# One object per program set, linked by `bpf-linker` for `bpfel-unknown-none`: the syscall
# tracepoints, the tc flow/egress programs, and the accounting probe ride together (splitting into
# more `[[bin]]`s stays an option if attaching them independently ever helps).
[[bin]]
name = "probes"
path = "src/main.rs"

# eBPF has no unwinder and the verifier rejects real panic paths, so both profiles abort on panic and
# build optimized (the verifier rejects the un-optimized stack/spill patterns a debug build emits).
# `debug = true` is deliberate and load-bearing: `bpf-linker` derives the object's **BTF** (the
# `.BTF` section + BTF-defined maps) from DWARF debug info, and BTF is what makes the program
# CO-RE-portable across kernels and lets aya relocate it at load (see `docs/probes.md`). Without it the object falls
# back to legacy maps and carries no BTF.
[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
