[package]
name = "agent-sandbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Run untrusted wasm (and Python-in-wasm) in a capability-scoped, metered wasmtime sandbox."

[dependencies]
# Reuse the containment budget type + defaults (fuel/memory/epoch) from the detector host.
agent-host = { path = "../host" }
# The sandbox: like the host, minimal features — plus WASI so guest code can do stdio and touch a
# scoped filesystem. Network stays off by construction (not wired into the linker).
wasmtime = { version = "46", default-features = false, features = [
    "cranelift",
    "runtime",
    "std",
    "gc-null",
] }
wasmtime-wasi = "46"

[dev-dependencies]
# Hand-write tiny wasm32-wasi modules in-test without a build step.
wat = "1"

[lints]
workspace = true
