[package]
name = "signals"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Screeners built on market-data + vol. The cheap-vol / proven-mover screen."

[dependencies]
exub-core = { path = "../core" }
vol = { path = "../vol" }

[dev-dependencies]
# Tests screen against the in-memory provider from the market-data crate.
market-data = { path = "../market-data" }
# The screen fns are `async` (they drive the provider seam), so tests need a runtime.
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
