[package]
name = "store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Persistent stores for exuberance — the SQLite IV-history store implementing exub-core's IvStore."

[dependencies]
exub-core = { path = "../core" }
async-trait.workspace = true
rusqlite.workspace = true

[dev-dependencies]
# A runtime to drive the async IvStore methods in `#[tokio::test]`.
tokio = { workspace = true, features = ["rt", "macros"] }
# Temp files for the persistence test (never a fixed path — parallel-test safe).
tempfile.workspace = true

[lints]
workspace = true
