[package]
name = "agent-vmm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "The Firecracker driver — microVM lifecycle, networking, snapshots, and the Sandbox API."

[dependencies]
# The Firecracker API is JSON over a unix socket: serde builds the request bodies, serde_json
# (de)serializes, and a tiny hand-rolled HTTP/1.1 client over `std::os::unix::net::UnixStream`
# speaks to it — no async runtime, no HTTP crate. The host path stays `unsafe`-free.
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# The host↔guest exec channel: the driver speaks the shared protocol over Firecracker's vsock.
agent-channel = { path = "../channel" }

[dev-dependencies]
# The round-trip channel test runs the real guest agent behind a fake vsock socket — no VM needed.
agent-guest = { path = "../guest-agent" }
# The secret-hygiene leak test captures everything both sides log during an exec and greps it.
tracing-subscriber = { workspace = true }
# Cross-crate test helpers (the cgroup-cap harness, host-capability probes), shared with the loader's
# privileged tests so they aren't copy-pasted. Dev-only, never shipped.
agent-test-support = { path = "../test-support" }

[lints]
workspace = true
