[package]
name = "vol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Volatility math: realized vol, IV rank/percentile, implied-realized spread, move detection."

[dependencies]
# Intentionally dependency-free. This crate is pure, deterministic, and offline-testable.
