[package]
name = "mock-detector"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "The keyless mock guardrail detector, compiled to a wasm artifact."

# Excluded from the root workspace (see root Cargo.toml `exclude`): this builds for
# wasm32-unknown-unknown, not the host, and carries the project's only `unsafe` (the ABI shim).
# `cargo xtask build-detectors` compiles it. Its own Cargo.lock is committed for reproducible
# artifact hashes.

[lib]
crate-type = ["cdylib"]

[dependencies]
agent-abi = { path = "../../crates/abi", features = ["mock"] }

# Small, self-contained wasm: optimize for size, one codegen unit, abort on panic (no unwinding
# machinery in the artifact), and strip symbols.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
