[package]
name = "pii-detector"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "The PII guardrail detector (emails, IPs, US phone/SSN, payment cards), as a wasm artifact."

# Excluded from the root workspace (see root Cargo.toml `exclude`): builds for
# wasm32-unknown-unknown, not the host, and carries only the ABI shim's `unsafe`. The detection
# rule lives in the host-testable `agent-detectors` crate. `cargo xtask build-detectors` compiles
# it; its own Cargo.lock is committed for reproducible artifact hashes.

[lib]
crate-type = ["cdylib"]

[dependencies]
agent-abi = { path = "../../crates/abi" }
agent-detectors = { path = "../../crates/detectors" }

# Small, self-contained wasm: optimize for size, one codegen unit, abort on panic, strip symbols.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
